[workspace]
members = [
  "contracts",
  "methods",
]

[workspace.dependencies]
dh-methods = { path = "methods" }
dh-contracts = { path = "contracts" }
risc0-zkp = { version = "0.15.0" }
risc0-zkvm = { version = "0.15.0" }
risc0-build = { version = "0.15.0" }
# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3
